# CC-DL-template-example

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  run_training.py  setup.cfg
bash/: finalize_environment.sh  init_development.sh
cctest/data/: make_mnist.py  make_oxford_pet.py  make_oxfordpet.py
cctest/datamodule/: base_datamodule.py  mnist_datamodule.py  oxford_iiit_pet_datamodule.py  oxfordpet_datamodule.py
cctest/executor/: train_model.py  training.py
cctest/model/: base_model_trainer.py
cctest/model/modules/: simple_conv_net.py  simple_dense_net.py  simple_unet.py
cctest/models/: base_model_trainer.py  base_trainer_module.py
cctest/models/modules/: simple_conv_net.py  simple_dense_net.py  simple_unet.py
cctest/utils/: my_callback.py  my_loss.py  my_losses.py  my_metric.py  my_metrics.py  utils.py
configs/: config.yaml  config_seg.yaml
configs/callback/: default.yaml  many_callbacks.yaml
configs/callbacks/: default.yaml  many_callbacks.yaml
configs/datamodule/: mnist_datamodule.yaml  oxfordpet_datamodule.yaml
configs/datamodule/data_aug/: medium_aug.yaml  mnist_small_aug.yaml  oxfordpet_medium_aug.yaml
configs/experiment/: example_full.yaml  example_simple.yaml  mnist_example_simple.yaml  oxfordpet_example_simple.yaml
configs/hparams_search/: mnist_optuna.yaml  mnist_ray.yaml  oxfordpet_optuna.yaml
configs/logger/: csv.yaml  image_logger.yaml  many_loggers.yaml  tensorboard.yaml  wandb.yaml
configs/mode/: debug.yaml  exp.yaml
configs/model/: mnist_model_conv.yaml  mnist_model_dense.yaml  oxfordpet_model_unet.yaml
configs/trainer/: debug.yaml  debug_gpu.yaml  default.yaml  default_seg.yaml
configs/trainer/loss/: bce.yaml  bce_dice.yaml  ce_dice.yaml  cross_entropy.yaml  dice.yaml
configs/trainer/lr_scheduler/: reduce_lr_on_plateau.yaml
configs/trainer/metric/: accuracy.yaml  dice.yaml  iou.yaml  many_matrices.yaml  many_metrics.yaml
configs/trainer/optimizer/: adam.yaml
data/: OxfordPet_test_data.txt  OxfordPet_training_data.txt  OxfordPet_validation_data.txt  test_data.txt  training_data.txt  validation_data.txt
docs/: Makefile  README.md  conf.py  index.rst  make.bat
docs/pages/project/: api.rst
docs/pages/template_guide/: overview.rst
licenses/: BSD-3  MIT
notebooks/: 1.0-IBa-MNIST_inspect_processed.ipynb  1.0-IBa-OxfordPet_data-download-and-processed.ipynb  1.0-IBa-data-download-and-processed.ipynb  1.0-IBa-data-download-and-processed.py  1.1-IBa-OxfordPet_inspect_processed.ipynb  Untitled.ipynb
tests/: conftest.py  test_oxford_iiit_pet_datamodule.py
tests/test_datamodule/: test_mnist_datamodule.py  test_oxfordpet_datamodule.py
{{cookiecutter.module_name}}/datamodule/: mnist_datamodule.py  oxfordpet_datamodule.py  test_oxford_iiit_pet_datamodule.py
{{cookiecutter.module_name}}/executor/: training.py
{{cookiecutter.module_name}}/model/: base_model_trainer.py
{{cookiecutter.module_name}}/model/modules/: simple_unet.py
{{cookiecutter.module_name}}/utils/: my_callback.py  my_loss.py  utils.py
