[build-system]
requires = ["poetry-core>=1.1.8"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
#name = "{{ cookiecutter.module_name }}"
name = "CC-test"
#description = "{{ cookiecutter.description }}"
description = "Das ist ein Test"
version = "0.1.0"
readme = "README.md"
#authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_mail }}>"]
authors = ["Ivo Matteo Baltruschat <ivo.baltruschat@desy.de>"]



[tool.poetry.dependencies]
# python = "^{{ cookiecutter.python_version_number }}"
python = "~3.9"
# {% if cookiecutter.ml_framework == "Tensorflow" %}
# tensorflow = "^{{ cookiecutter.ml_framework_version }}"
# {% elif cookiecutter.ml_framework == "PyTorch" %}
# torch = "^{{ cookiecutter.ml_framework_version }}"
# {% endif %}
tensorflow = "~2.7"
tensorflow-datasets = "^4.4.0"

#{% if cookiecutter.add_example_project == "yes" %}
jsonschema = "^3.2.0"
pydot = "^1.4.2"
matplotlib = "^3.4.3"
python-dotenv = "^0.19.1"
albumentations = "^1.1.0"
hydra-core = "^1.1.1"
hydra-colorlog = "^1.1.0"
hydra-optuna-sweeper = "^1.1.1"
rich = "^10.12.0"
#{% endif %}

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.5"
flake8-logging-format = "^0.6"
nitpick = "^0.27"

pytest = "^6.2"
pytest-cov = "^2.12"
pytest-randomly = "^3.8"
pytest-deadfixtures = "^2.2"
pytest-testmon = "^1.1"
pytest-timeout = "^1.4"
hypothesis = "^6.14"

mypy = "^0.910"

sphinx = "^4.1"
sphinx-autodoc-typehints = "^1.12"
tomlkit = "^0.7"
doc8 = "^0.9"

yamllint = "^1.26"
safety = "^1.10"
dotenv-linter = "^0.2"
dump-env = "^1.3"
ipython = "^7.25"
jupyter = "^1.0.0"
