[build-system]
requires = ["poetry-core>=1.1.8"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "cctest"
description = "Das ist ein Test"
version = "0.1.4"
readme = "README.md"
authors = ["Ivo Matteo Baltruschat <ivo.baltruschat@desy.de>"]



[tool.poetry.dependencies]
python = "~3.9"
tensorflow = "~2.7"
tensorflow-datasets = "^4.4.0"

jsonschema = "^3.2.0"
pydot = "^1.4.2"
matplotlib = "^3.4.3"
python-dotenv = "^0.19.1"
albumentations = "^1.1.0"
hydra-core = "^1.1.1"
hydra-colorlog = "^1.1.0"
hydra-optuna-sweeper = "^1.1.1"

rich = "^10.12.0"
wandb = "^0.12.7"
flatdict = "^4.0.1"
seaborn = "^0.11.2"
seaborn-image = "^0.4.4"
# hydra-ray-launcher, add later whenn version is bumped



[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.5"
flake8-logging-format = "^0.6"
nitpick = "^0.27"

pytest = "^6.2"
pytest-cov = "^2.12"
pytest-randomly = "^3.8"
pytest-deadfixtures = "^2.2"
pytest-testmon = "^1.1"
pytest-timeout = "^1.4"
pytest-clarity = "^1.0.1"
pytest-sugar = "^0.9.4"
hypothesis = "^6.14"

mypy = "^0.910"

sphinx = "^4.1"
sphinx-autodoc-typehints = "^1.12"
tomlkit = "^0.7"
doc8 = "^0.9"

yamllint = "^1.26"
safety = "^1.10"
dotenv-linter = "^0.2"
dump-env = "^1.3"
ipython = "^7.25"
jupyter = "^1.0.0"
icecream = "^2.1.1"
hydra-colorlog = "^1.1.0"

pre-commit = "^2.15.0"
